--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build with Clang Static Analyzer
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           scan-build --use-cc=clang -analyze-headers -enable-checker security -enable-checker unix -enable-checker valist -o scan-build --status-bugs make default
       - uses: actions/upload-artifact@v2
@@ -72,7 +72,7 @@ jobs:
       - name: Build with cov-build
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           cov-build --dir cov-int make default
       - name: Submit the result to Coverity Scan
@@ -84,7 +84,7 @@ jobs:
             --form file=@cov-int.tar.gz \
             --form version=master \
             --form description="Plugin" \
-            https://scan.coverity.com/builds?project=LedgerHQ%2Fapp-plugin-<Plugin Name>
+            https://scan.coverity.com/builds?project=LedgerHQ%2Fapp-plugin-cowswap
         # Change the line above to the new url for this plugin
         env:
           EMAIL: ${{ secrets.COVERITY_SCAN_EMAIL }}
@@ -103,18 +103,18 @@ jobs:
       - name: Build plugin for Nano S
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           make BOLOS_SDK=$NANOS_SDK
       - name: Move binary to test directory
         run: |
           mkdir -p ./tests/elfs/
-          mv bin/app.elf ./tests/elfs/<Plugin Name>_nanos.elf
+          mv bin/app.elf ./tests/elfs/cowswap_nanos.elf
       - name: Upload plugin binary
         uses: actions/upload-artifact@v2
         with:
           name: binaries
-          path: tests/elfs/<Plugin Name>_nanos.elf
+          path: tests/elfs/cowswap_nanos.elf
 
   job_build_debug_nano_sp:
     name: Build debug Nano S+
@@ -129,18 +129,18 @@ jobs:
       - name: Build plugin for Nano S+
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           make BOLOS_SDK=$NANOSP_SDK
       - name: Move binary to test directory
         run: |
           mkdir -p ./tests/elfs/
-          mv bin/app.elf ./tests/elfs/<Plugin Name>_nanosp.elf
+          mv bin/app.elf ./tests/elfs/cowswap_nanosp.elf
       - name: Upload plugin binary
         uses: actions/upload-artifact@v2
         with:
           name: binaries
-          path: tests/elfs/<Plugin Name>_nanosp.elf
+          path: tests/elfs/cowswap_nanosp.elf
 
   job_build_debug_nano_x:
     name: Build debug Nano X
@@ -155,18 +155,18 @@ jobs:
       - name: Build plugin for Nano X
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           make BOLOS_SDK=$NANOX_SDK
       - name: Move binary to test directory
         run: |
           mkdir -p ./tests/elfs/
-          mv bin/app.elf ./tests/elfs/<Plugin Name>_nanox.elf
+          mv bin/app.elf ./tests/elfs/cowswap_nanox.elf
       - name: Upload plugin binary
         uses: actions/upload-artifact@v2
         with:
           name: binaries
-          path: tests/elfs/<Plugin Name>_nanox.elf
+          path: tests/elfs/cowswap_nanox.elf
 
   job_build_ethereum_nano_s:
     name: Build Ethereum application for Nano S testing
@@ -183,7 +183,7 @@ jobs:
       - name: Build ethereum
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOS_SDK CHAIN=ethereum ALLOW_DATA=1
       - name: Move binary to test directory
@@ -211,7 +211,7 @@ jobs:
       - name: Build ethereum
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOS_SDK CHAIN=ethereum ALLOW_DATA=1
       - name: Move binary to test directory
@@ -239,7 +239,7 @@ jobs:
       - name: Build ethereum
         # Change the line below to the new safe directory
         run: |
-          git config --global --add safe.directory /__w/<Plugin Repo Name>/<Plugin Repo Name>
+          git config --global --add safe.directory /__w/LedgerHQ-app-plugin-cowswap/LedgerHQ-app-plugin-cowswap
           make clean
           make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOX_SDK CHAIN=ethereum ALLOW_DATA=1
       - name: Move binary to test directory
